k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-server
  labels:
    app: blog-server
spec:
  selector:
    app: blog-server
  ports:
    - name: http
      port: 80
      targetPort: 1323

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-server
  labels:
    app: blog-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-server
  template:
    metadata:
      labels:
        app: blog-server
    spec:
      containers:
        - name: blog-server
          image: le0tk0k/blog-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 1323
